--- a/src/app/qrGenerator/qr-generator.component.html
+++ b/src/app/qrGenerator/qr-generator.component.html
@@ -44,7 +44,7 @@
           </div>
           <div class="row">
               <div *ngFor="let table of tables" style="border: solid 1px red; padding:1rem;">
-                  <mdb-checkbox (change)="addToGenerator(table)">{{ table.number }}</mdb-checkbox>
+                  <mdb-checkbox [class.checkbox-primary-custom]="true"  (change)="addToGenerator(table)">{{ table.number }}</mdb-checkbox>
               </div>
           </div>
           <div class="row">
