--- a/src/app/section/section-list/section-list.component.scss
+++ b/src/app/section/section-list/section-list.component.scss
@@ -19,3 +19,7 @@ input.search-table-box[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
+
+.sectionNames{
+    padding-top: .6rem!important;
+}
