--- a/src/app/stock-control/stock-control-modify/stock-control-modify.component.html
+++ b/src/app/stock-control/stock-control-modify/stock-control-modify.component.html
@@ -32,7 +32,7 @@
       <div class="row pl-2">
         <div class="col-md-4 col-lg-4">
           <div class="md-form">
-            <mdb-checkbox [(ngModel)]="stockControl" name="checkStockCOntrol"> {{ stockControlText }}</mdb-checkbox>
+            <mdb-checkbox [class.checkbox-primary-custom]="true"  [(ngModel)]="stockControl" name="checkStockCOntrol"> {{ stockControlText }}</mdb-checkbox>
           </div>
         </div>
       </div>
