--- a/src/app/client/client-new/client-new.component.html
+++ b/src/app/client/client-new/client-new.component.html
@@ -79,7 +79,7 @@
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
       <div class="row pl-2">
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <mdb-checkbox [(ngModel)]="newClient.enabledTransactions" name="checkEnabledTransactions"> {{ checkboxText }}</mdb-checkbox>
+          <mdb-checkbox [class.checkbox-primary-custom]="true"  [(ngModel)]="newClient.enabledTransactions" name="checkEnabledTransactions"> {{ checkboxText }}</mdb-checkbox>
         </div>
       </div>
     </div>
