--- a/src/app/menu/menu-modify/menu-modify.component.html
+++ b/src/app/menu/menu-modify/menu-modify.component.html
@@ -44,7 +44,7 @@
         <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
           <div class="row pl-2">
             <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-              <mdb-checkbox name="menuAvailable" [(ngModel)]="menu.available"> {{ checkboxAvailableText }}
+              <mdb-checkbox [class.checkbox-primary-custom]="true"  name="menuAvailable" [(ngModel)]="menu.available"> {{ checkboxAvailableText }}
               </mdb-checkbox>
             </div>
           </div>
