--- a/src/app/payment-type/payment-type-new/payment-type-new.component.html
+++ b/src/app/payment-type/payment-type-new/payment-type-new.component.html
@@ -37,7 +37,7 @@
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
       <div class="row pl-2">
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <mdb-checkbox formControlName="available"> {{ checkboxAvailableText }}</mdb-checkbox>
+          <mdb-checkbox [class.checkbox-primary-custom]="true"  formControlName="available"> {{ checkboxAvailableText }}</mdb-checkbox>
         </div>
       </div>
     </div>
