--- a/src/app/product/product-modify/product-modify.component.html
+++ b/src/app/product/product-modify/product-modify.component.html
@@ -106,13 +106,13 @@
           </div>
 
           <div class="form-group">
-            <mdb-checkbox formControlName="available"> {{ checkboxAvailableText }}</mdb-checkbox>
+            <mdb-checkbox [class.checkbox-primary-custom]="true"  formControlName="available"> {{ checkboxAvailableText }}</mdb-checkbox>
           </div>
 
           <div class="row" *ngIf="enableStock"> 
             <div class="col-md-4 col-lg-4">
               <div class="md-form">
-                <mdb-checkbox formControlName="stockControl"> {{ stockControlText }}</mdb-checkbox>
+                <mdb-checkbox [class.checkbox-primary-custom]="true"  formControlName="stockControl"> {{ stockControlText }}</mdb-checkbox>
               </div>
             </div>
             <div class="row col-md-8 col-lg-8" [formGroup]="productForm.controls.stock"
