--- a/src/app/size/size-edit/size-edit.component.html
+++ b/src/app/size/size-edit/size-edit.component.html
@@ -36,7 +36,7 @@
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
       <div class="row pl-2">
-        <mdb-checkbox formControlName="available"> {{ checkboxAvailableText }}</mdb-checkbox>
+        <mdb-checkbox [class.checkbox-primary-custom]="true"  formControlName="available"> {{ checkboxAvailableText }}</mdb-checkbox>
       </div>
     </div>
   </form>
