--- a/src/app/supplier-module/supplier-module.component.html
+++ b/src/app/supplier-module/supplier-module.component.html
@@ -2,7 +2,7 @@
 <ul class="nav classic-tabs tabs-primary customLinksColor">
   <div *ngFor='let appMenu of appMenus'>
     <li *ngIf='appMenu.show' class="nav-item">
-      <a class="waves-effect" [routerLink]="[appMenu._id, { outlets: { edit: ['selectItem'] } }]"
+      <a mdbWavesEffect [class.appMenusLinks]="true" [routerLink]="[appMenu._id, { outlets: { edit: ['selectItem'] } }]"
         routerLinkActive="active">
         {{ 'AppMenus.' + appMenu._id | translate }}
       </a>
