--- a/src/app/supplier/supplier-list/supplier-list.component.html
+++ b/src/app/supplier/supplier-list/supplier-list.component.html
@@ -23,7 +23,7 @@
         <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
             <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-4 pb-2 mt-2 text-center">
                 <div class="row">
-                    <mdb-checkbox [(ngModel)]="showInactiveSuppliers" name="inactiveSuppliers">{{ checkboxText }}
+                    <mdb-checkbox [class.checkbox-primary-custom]="true"  [(ngModel)]="showInactiveSuppliers" name="inactiveSuppliers">{{ checkboxText }}
                     </mdb-checkbox>
                     <br>
                     <br>
