--- a/src/app/supplier/supplier-new/supplier-new.component.html
+++ b/src/app/supplier/supplier-new/supplier-new.component.html
@@ -82,7 +82,7 @@
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
       <div class="row pl-2">
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <mdb-checkbox name="checkEnabledTransactions" [(ngModel)]="newSupplier.active"> {{ checkboxText }}
+          <mdb-checkbox [class.checkbox-primary-custom]="true"  name="checkEnabledTransactions" [(ngModel)]="newSupplier.active"> {{ checkboxText }}
           </mdb-checkbox>
         </div>
       </div>
