--- a/src/app/user-roles/user-roles-edit/user-roles-edit.component.html
+++ b/src/app/user-roles/user-roles-edit/user-roles-edit.component.html
@@ -37,7 +37,7 @@
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-0 pb-0 pr-3 pl-3 mt-2">
       <div class="row pl-2">
-        <mdb-checkbox formControlName="isWaiter">{{ 'UserRoles.isWaiter' | translate }}</mdb-checkbox>
+        <mdb-checkbox [class.checkbox-primary-custom]="true"  formControlName="isWaiter">{{ 'UserRoles.isWaiter' | translate }}</mdb-checkbox>
       </div>
     </div>
 
