--- a/src/app/user-roles/user-roles-new/user-roles-new.component.html
+++ b/src/app/user-roles/user-roles-new/user-roles-new.component.html
@@ -35,7 +35,7 @@
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
       <div class="row pl-2">
-        <mdb-checkbox formControlName="isWaiter">{{ 'UserRoles.isWaiter' | translate }}</mdb-checkbox>
+        <mdb-checkbox [class.checkbox-primary-custom]="true"  formControlName="isWaiter">{{ 'UserRoles.isWaiter' | translate }}</mdb-checkbox>
       </div>
     </div>
   </form>
