--- a/src/app/category/category-new/category-new.component.html
+++ b/src/app/category/category-new/category-new.component.html
@@ -77,7 +77,7 @@
             
 			<li>
 			<div class="boton-cancelar">
-			<input type="button" value="Cancelar" (click)="showModalCancel(cancelTemplate)" />
+			<input id="botoncancel" type="button" value="Cancelar" (click)="showModalCancel(cancelTemplate)" />
 			</div>
 			</li>
 			
