--- a/src/app/menu/menu-modify/menu-modify.component.html
+++ b/src/app/menu/menu-modify/menu-modify.component.html
@@ -60,7 +60,7 @@
           <ul class="actions" align="center">
             <li><input [disabled]="form.invalid" type="submit" value="Aceptar" class="special"
                 (click)="updateMenu(menu)"/></li>
-            <li><input (click)="showModalCancel(cancelTemplate, cancelMessage, cancelTitle)" type="button" value="Cancel" /></li>
+            <li><input (click)="showModalCancel(cancelTemplate, cancelMessage, cancelTitle)" class="cancel" type="button" value="Cancel" /></li>
           </ul>
         </div>
 
