--- a/src/app/menu/menu-new/menu-new.component.css
+++ b/src/app/menu/menu-new/menu-new.component.css
@@ -20,15 +20,26 @@ display:inline-block;
 padding:10px;
 }
 
+ul li input.special{
+background-color:#718239;
+border-radius:30px;
+border-color:transparent;
+padding:10px;
+color:#fff;
+}
+
 input{
 border-radius:20px;
-padding:5px;
 background-color:transparent;
+border-color:transparent;
+color:#555;
 }
 
 .boton-cancelar{
-border:solid 2px #e43012;
-background-color:#fff;
-color:#e43012;
-border-radius:20px;
+background-color:transparent;
+border-radius:30px;
+border-color:#bd290c;
+padding:10px;
+border:2px solid;
+color:#bd290c;
 }
