--- a/src/app/order/order-new/order-new.component.scss
+++ b/src/app/order/order-new/order-new.component.scss
@@ -143,7 +143,8 @@
 }
 
 .infoSection{
-    background-color: #f6f6f6
+    background-color: #f6f6f6;
+    border-left: solid 4px #999999;
 }
 
 .buttonOrder{
@@ -224,4 +225,8 @@
     padding-right: 1rem;
     padding-bottom: 1rem;
     margin-left:30%;
+}
+
+.warningMsg {
+  color: red;
 }
