--- a/src/app/order/order-close/order-close.component.scss
+++ b/src/app/order/order-close/order-close.component.scss
@@ -6,8 +6,8 @@
 }
 
 .sectionTitle{
-    background-color: #999999;
-    color: white;
+    background-color: #c7cbaf;
+    color: #424242;
     font-weight: bold;
     padding-top: .75rem;
     padding-bottom: .75rem;
@@ -15,7 +15,7 @@
 }
 
 .totalOrder{
-    background-color: #4c4c4c;
+    background-color: #718239;
     color: white;
     font-weight: bold;
     padding-top: .75rem;
@@ -89,8 +89,8 @@
 }
 
 .totalChange{
-    background-color: #e5e5e5;
-    color: #616060;  
+    background-color: #718239;
+    color: #fff;  
     font-weight: bold;
     padding-top: .75rem;
     padding-bottom: .75rem;
