--- a/src/app/select-item/select-item.component.html
+++ b/src/app/select-item/select-item.component.html
@@ -1,5 +1,6 @@
 <div class="d-flex justify-content-center pt-5">
-  <h5>
-    <i class='fa fa-chevron-left'></i> {{ 'Commons.selectItem' | translate }}
-  </h5>
+  <div class="row">
+    <i class='fa fa-chevron-circle-left fa-2x' style="color: #718239;"></i>
+    <h5 class="ml-2 mt-1">{{ 'Commons.selectItem' | translate }}</h5>
+  </div>
 </div>
